# Automated-testing

./: .cursorignore  .cursorsettings  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Jenkins部署.md  README.md  pyproject.toml  pytest.ini
.cursor/: config.json
.cursor/rules/: ci-cd-integration.mdc  clean-code-refactoring.mdc  code-analysis-first.mdc  code-consistency.mdc  code-refactoring-standards.mdc  debug-code-management.mdc  documentation-completeness.mdc  environment-setup.mdc  external-configuration.mdc  force-business-implementation.mdc  interface-first-principle.mdc  logging-standards.mdc  page-object-pattern.mdc  platform-specific-testing.mdc  project-documentation-first.mdc  resource-management.mdc  rule-priority.mdc  secure-data-handling.mdc  seven-layer-architecture.mdc  smart-wait-strategy.mdc  specific-exceptions.mdc  test-data-separation.mdc  type-annotations.mdc  version-control.mdc
.github/workflows/: test.yml
ci/scripts/: README.md  check_device.sh  deploy_allure_report.sh  env_setup.py  generate_allure_report.sh  generate_report.py  notify.py  prepare_nginx_dir.sh  run_and_notify.py  run_tests.py  utils.py  write_allure_metadata.py
config/: README.md  settings.yaml
config/env/: prod.yaml  test.yaml
data/: README.md
data/api/: payment_data.yaml
data/web/login/: login_data.yaml
docs/: 00-环境依赖安装步骤.md  00-环境变量配置.md  01-环境变量配置.md  API自动化测试开发指南.md  Web测试用例开发指南.md  Web自动化测试开发指南.md  enhanced_architecture.md  usage.md  web_login_test_guide.md  微信&APP自动化测试开发指南.md  环境依赖安装&CICD集成.md  自动化测试环境依赖.md  自动环境部署&CICD集成.md
logs/airtest_logs/: log.txt
src/api/: README.md  __init__.py
src/api/models/: payment_models.py
src/api/services/: payment_service.py
src/common/components/: monthly_card_flow.py
src/core/: __init__.py
src/core/base/: README.md  __init__.py  conditions.py  config_defs.py  driver.py  element.py  errors.py  log_interfaces.py  mixins.py  page.py  wait.py
src/mobile/: __init__.py
src/mobile/screens/: __init__.py  jiyu_entry_screen.py
src/utils/: README.md  __init__.py  allure_helpers.py  data_generator.py  email_notifier.py  error_handling.py  event.py  file_utils.py  ocr.py  patterns.py  screenshot.py  signature.py  time.py  time_utils.py  waits.py
src/utils/config/: __init__.py  loaders.py  manager.py
src/utils/log/: __init__.py  manager.py
src/utils/ocr/: __init__.py  captcha.py
src/web/: README.md  __init__.py  condition_handlers.py  driver.py  driver_playwright_adapter.py  element.py  wait.py
src/web/pages/: README.md  __init__.py  dashboard_page.py  login_page.py  omp_login_page.py
src/web/pages/omp/: login_page.py
src/web/utils/: form_validator.py
src/wechat/: __init__.py
src/wechat/screens/: official_account_entry.py
src/wechat/utils/: navigation.py
tests/: README.md  conftest.py
tests/api/: conftest.py  test_payment_unified_order.py
tests/mobile/: conftest.py  test_jiyu_monthly_card.py
tests/web/: conftest.py
tests/web/login/: test_login.py  test_omp_login.py
tests/web/omp/: test_login.py
tests/wechat/: conftest.py  test_mini_program_monthly_card.py  test_official_account_monthly_card.py
